mod index.js => tslint-only-modules.json

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "tslint-only-modules",
   "version": "1.0.1",
   "description": "TSLint rule that restricts affected files to be modules",
-  "main": "index.js",
+  "main": "tslint-only-modules.json",
   "dependencies": {
     "tslint": "^5.12.1",
     "typescript": "^3.3.3"
