--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,13 @@
+.DS_STORE
 # Logs
 logs
 *.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+*.un~
+*.sw[op]
 
-# Dependency directories
+# Built
 node_modules/
-
-# Generated JavaScript
-**/*.js
+/build
