modify publish workflow

--- a/package.json
+++ b/package.json
@@ -16,10 +16,8 @@
   },
   "scripts": {
     "copy": "cp -f package.json README.md LICENSE tslint-only-modules.json build/",
-    "build": "tsc -p ./ && npm run copy",
-    "clean": "rm -rf build/",
-    "rebuild": "npm run clean && npm run build",
-    "publish": "npm run rebuild && npm publish build/"
+    "build": "tsc -p ./",
+    "clean": "rm -rf build/"
   },
   "author": "Jamie Day <jamie@jamieday.ca>",
   "repository": {
