--- a/package.json
+++ b/package.json
@@ -3,16 +3,18 @@
   "version": "1.0.4",
   "description": "TSLint rule that restricts affected files to be modules",
   "main": "tslint-only-modules.json",
-  "dependencies": {},
   "peerDependencies": {
-    "tslint": "^5.1.0",
-    "typescript": ">=2.1.0 || >=2.7.0-dev || >=2.8.0-dev || >=2.9.0-dev"
+    "tslint": "*",
+    "typescript": "*"
+  },
+  "dependencies": {
+    "tslib": "^2.0.0"
   },
   "devDependencies": {
-    "@types/node": "^10.12.24",
-    "tslint": "^5.12.1",
-    "typescript-tslint-plugin": "^0.3.1",
-    "typescript": "^3.3.3"
+    "@types/node": "^14.0.8",
+    "tslint": "^6.1.2",
+    "typescript": "^3.9.3",
+    "typescript-tslint-plugin": "^0.5.5"
   },
   "scripts": {
     "copy": "cp -f package.json README.md LICENSE tslint-only-modules.json build/",
